--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "sequelize": "^6.33.0",
+    "supabase": "^1.93.0",
+    "url": "^0.11.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
